<resources>
    <string name="app_name">Water Life</string>
    <string name="get_started">Let\'s get started...</string>
    <string name="home">Home</string>
    <string name="update_water_content">Update Water Content</string>
    <string name="view_daily_water_content">View Daily Water Content</string>
    <string name="tips_about_water_content">Tips About Water Content</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="update_daily_water_below">Update your daily water content below:</string>
    <string name="water_since_last_entry">How much water have you had since you last recorded an entry?</string>
    <string name="number_full_glasses">(Please enter an integer for the number of full glasses)</string>
    <string name="your_daily_water_content_breakdown">Your daily water content breakdown:</string>
    <string name="todays_consumption_btn">View today\'s history</string>
    <string name="water_consumption_tips">Water Consumption Tips</string>
    <string name="tip_one">Tip #1: Drinking a pint of water in one go is not easy. Our advice is to sip at your glass! You could use a straw to help with this.</string>
    <string name="tip_two">Tip #2: Pace yourself through the day. Use a water bottle to mark where you want to be at what time.</string>
    <string name="tip_three">Tip #3: If you\'re bored, a little sugar won\'t hurt you! Have a small, flavoured glass of water during the day to break things up.</string>
    <string name="tip_four">Tip #4: Don\'t forget to eat. It\'s all well and good drinking lot\'s of water, but don\'t do it in replacement of meals!</string>
    <string name="tip_five">Tip #5: You could always imagine you\'re just sipping a Pina Colada. Unless, of course, that makes you crave one too badly that you\'ll actually go get one...</string>
    <string name="share_findings">Share your findings!</string>
    <string name="who_do_you_want_to_email">Who do you want to email?</string>
    <string name="enter_email_address_here">Enter email address here...</string>
    <string name="what_do_you_want_to_share">What do you want to share?</string>
    <string name="write_your_message_here">Write your message here...</string>
    <string name="reset">Reset</string>
    <string name="no_email_client">No email client is installed</string>
    <string name="enter_a_msg_warning">Please enter a message!</string>
    <string name="specify_email_warning">Please specify an email address!</string>
    <string name="channel_one">WaterLifeOne</string>
    <string name="channel_description">WaterLifeOne</string>
    <string name="drunk_zero">You have drunk 0 glasses of water so far.</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="name_setting">Name Setting</string>
    <string name="replace">Replace</string>
    <string name="goal_setting">Goal Setting</string>
    <string name="how_to_achieve_your_goals">How to achieve your goals...</string>
    <string name="our_privacy_policy">Our Privacy Policy</string>
    <string name="most_important_points_to_note">Most Important Points to Note:</string>
    <string name="call_a_friend_instead">Call a friend instead!</string>
    <string name="write_their_phone_number_here">Write their phone number here...</string>
    <string name="call">Call</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
    <string name="tips">Tips</string>
    <string name="remain_home_page">Remaining on Home page...</string>
    <string name="launch_update_water">Launching update water content...</string>
    <string name="launch_view_water">Launching view daily water content...</string>
    <string name="launch_tips">Launching tips about water content...</string>
    <string name="launch_settings">Launching settings...</string>
    <string name="remain_view_water">Remaining on View Daily Water Content page...</string>
    <string name="remain_update_water">Remaining on Update Water Content page...</string>
    <string name="share_water_life_app">Sharing from WaterLife Android App</string>
    <string name="remain_tips">Remaining on Tips About Water Content tabs...</string>
    <string name="remain_settings">Remaining on Settings pages...</string>
    <string name="user_clicked_name">User clicked on Name setting...</string>
    <string name="user_clicked_goal">User clicked on Goal setting...</string>
    <string name="user_clicked_privacy">User clicked on Privacy Policy...</string>
</resources>
