<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/fifteen_dp_padding">

    <android.support.v7.widget.AppCompatTextView
        android:textSize="@dimen/twentytwo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_findings"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/twenty_dp_height" />

    <android.support.v7.widget.AppCompatTextView
        android:textSize="@dimen/twenty_dp_textsizing"
        android:padding="@dimen/ten_dp_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_do_you_want_to_email"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/email_content"
        android:textSize="@dimen/twenty_dp_textsizing"
        android:lines="1"
        android:padding="@dimen/ten_dp_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_address_here"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/twenty_dp_height" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_want_to_share"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/message_content"
        android:textSize="@dimen/twenty_dp_textsizing"
        android:lines="1"
        android:padding="@dimen/ten_dp_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_your_message_here"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/twenty_dp_height" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/send_email_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourty_dp_height" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_a_friend_instead"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/phone_number"
        android:textSize="@dimen/twenty_dp_textsizing"
        android:lines="1"
        android:padding="@dimen/ten_dp_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_their_phone_number_here"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/call_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"/>

</android.support.v7.widget.LinearLayoutCompat>