<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/fifteen_dp_padding">

    <android.support.v7.widget.AppCompatTextView
        android:textSize="@dimen/twentytwo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_setting"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourty_dp_height" />

    <android.support.v7.widget.AppCompatTextView
        android:textSize="@dimen/twenty_dp_textsizing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_name"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/users_name"
        android:textSize="@dimen/twenty_dp_textsizing"
        android:padding="@dimen/ten_dp_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourty_dp_height" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/replace_name_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replace"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/reset_name_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"/>

</android.support.v7.widget.LinearLayoutCompat>