<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_consumption_tips"
        android:textSize="@dimen/twentyeight_text"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/BL"
        android:padding="15dp">

        <android.support.v7.widget.AppCompatTextView
            android:textSize="@dimen/twenty_dp_textsizing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_one"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/BM"
        android:padding="15dp">

        <android.support.v7.widget.AppCompatTextView
            android:textSize="@dimen/twenty_dp_textsizing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_two"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/BL"
        android:padding="15dp">

        <android.support.v7.widget.AppCompatTextView
            android:textSize="@dimen/twenty_dp_textsizing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_three"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/BM"
        android:padding="15dp">

        <android.support.v7.widget.AppCompatTextView
            android:textSize="@dimen/twenty_dp_textsizing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_four"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/BL"
        android:padding="15dp">

        <android.support.v7.widget.AppCompatTextView
            android:textSize="@dimen/twenty_dp_textsizing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_five"/>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>