<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="assessment.c1714546.c1714546assessment.updateWaterContent.UpdateWaterContentActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/BM">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/twenty_dp_padding"
        >

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/users_name"
            android:textSize="@dimen/twentyeight_text"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/update_daily_water_below"
            android:textSize="@dimen/twentytwo_text" />
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <android.support.v7.widget.AppCompatTextView
            android:textSize="@dimen/twenty_dp_textsizing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gen_time"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <android.support.v7.widget.AppCompatTextView
            android:padding="@dimen/ten_dp_padding"
            android:textSize="@dimen/twenty_dp_textsizing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_since_last_entry"/>

        <android.support.v7.widget.AppCompatTextView
            android:padding="@dimen/ten_dp_padding"
            android:textSize="@dimen/twenty_dp_textsizing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_full_glasses"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/get_glasses"
            android:textSize="@dimen/twenty_dp_textsizing"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/launch_view_activity_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todays_consumption_btn"/>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>
